packages/parser/test/parser/E0134-equals.txt
a: int =
===== err =====
anonymous:1:9: ParseError: E0134 - Expected variable declaration initializer after equals sign
1 | a: int =
  |         ^
